src/test/deca/syntax/valid/improvided/if_then_else_imbriq.deca
// Description :
// 	test d'un ifthenelse imbrique
// Resultats :
// 	ok
{
	if (true){
		print("ok");
	}
	else{
		if (false){
			println("Ahaaaa");
		}
		else{
			print("Ohoooo");	
		}
	}
}
