src/test/deca/syntax/invalid/improvided/string_slash.deca
// Description :
// 	Test d'un string contenenant des backslash.
// Resultats :
// 	Ligne 6:
{
	print("\\\\\");
}
